--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -62,5 +62,17 @@
     font-size: 18px;
     line-height: 1.5;
   }
+
+  @media (max-width: 650px) { 
+    .aabout-content h2 {
+      font-size: 24px;
+    }
+    .aabout-content p {
+      font-size: 12px;
+      line-height: 1.5;
+    }
+  }
+
+
   
   
