--- a/assets/css/blog-style.css
+++ b/assets/css/blog-style.css
@@ -7,7 +7,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color:#2a597d;
+  /* background-color:#2a597d; */
+  background-color: hsl(234, 90%, 70%, 0.2);
   font-family: 'Poppins', sans-serif !important;
 
 }
