--- a/assets/css/aboutus.css
+++ b/assets/css/aboutus.css
@@ -21,7 +21,7 @@
     font-family: Arial, sans-serif;
     position: relative;
     padding: 20px 0 100px 0;
-    background-color: #3d7fb3;
+    background-color: hsl(224, 30%, 27%);
     text-align: center;
   }
   .aabout-content p {
