--- a/assets/css/places.css
+++ b/assets/css/places.css
@@ -7,7 +7,7 @@
   height: 80vh;
 }
 .box-1-sam {
-  background-color: #f0f0f0;
+  background-color: hsl(234, 90%, 70%, 0.2);
   flex: 1;
 }
 .content-sam {
@@ -22,14 +22,14 @@
   margin: 10px;
 }
 .content-sam h1 {
-  font-size: 60px;
+  font-size: 56px;
   font-weight: 600;
   margin-bottom: 10px;
   line-height: 75px;
   margin-bottom: 25px;
 }
 .content-sam p {
-  font-size: 20px;
+  font-size: 19px;
   margin-top: 10px;
   margin-bottom: 10px;
   line-height: 35px;
@@ -40,14 +40,19 @@
 .content-sam > a {
   text-decoration: none;
   color: #f0f0f0;
-  font-size: 24px;
+  font-size: 20px;
   margin-top: 20px;
   padding: 7px 14px;
   background: hsl(224, 30%, 27%);
   border-radius: 12px;
 }
 .content-sam > a:hover {
-  color: lightgreen;
+  color: limegreen;
+  box-shadow: 0 0 1rem hsl(224, 30%, 27%);
+}
+.content-sam span {
+  font-size: 1.5em;
+  color: hsl(224, 30%, 27%);
 }
 
 .box-2-sam {
@@ -140,7 +145,7 @@
 @media (min-width: 648px) and (max-width: 1024px) {
   .content-sam.active h1 {
     font-size: 48px;
-    line-height: 45px;
+    line-height: 50px;
   }
   .content-sam.active p {
     font-size: 16px;
