--- a/assets/css/contact.css
+++ b/assets/css/contact.css
@@ -1,10 +1,13 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif; }
+  font-family: "Poppins", sans-serif;
+}
 
-#contact {
+#contact-c {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -12,40 +15,45 @@
   min-height: 100vh;
   padding: 50px 100px;
   flex-direction: column;
-  background-size: cover;
-  background-image: url(./background.jpg); }
+  background-image: linear-gradient(hsl(224, 43%, 58%), black);
+}
 
-#contact .content {
+#contact-c .content-c {
   max-width: 800px;
-  text-align: center; }
+  text-align: center;
+}
 
-#contact .content h2 {
+#contact-c .content-c h2 {
   font-size: 35px;
   font-weight: 500;
-  color: white; }
+  color: white;
+}
 
-#contact .content p {
+#contact-c .content-c p {
   font-weight: 300;
-  color: white; }
+  color: white;
+}
 
-.container {
+.container-c {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
-  margin-top: 32px; }
+  margin-top: 32px;
+}
 
-.container .contactInfo {
-  width: 50%;
+.container-c .contactInfo {
   display: flex;
-  flex-direction: column; }
+  flex-direction: column;
+}
 
-.container .contactInfo .box {
+.container-c .contactInfo .box-c {
   position: relative;
   padding: 20px 0;
-  display: flex; }
+  display: flex;
+}
 
-.container .contactInfo .box .icon {
+.container-c .contactInfo .box-c .icon {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -53,36 +61,44 @@
   height: 60px;
   background: white;
   border-radius: 50%;
-  font-size: 22px; }
+  font-size: 22px;
+}
 
-.container .contactInfo .box .text {
+.container-c .contactInfo .box-c .text-c {
   display: flex;
   margin-left: 20px;
   font-size: 16px;
   color: white;
   flex-direction: column;
-  font-weight: 300; }
+  font-weight: 300;
+}
 
-.container .contactInfo .box .text h3 {
-  margin-top: 8px;
+.container-c .contactInfo .box-c .text-c h3 {
+  margin-top: 0px;
   font-weight: 550;
-  color: #00bcd4; }
+  color: white;
+}
 
 .contactForm {
-  width: 40%;
+  margin-right: 100px;
+  border-radius: 15px;
+  width: 30rem;
   padding: 40px;
   background: white;
-  box-shadow: 7px 7px 7px; }
+  box-shadow: 7px 7px 7px;
+}
 
 .contactForm h2 {
   font-size: 30px;
   color: #333;
-  font-weight: 500px; }
+  font-weight: 500px;
+}
 
 .contactForm .inputBox {
   position: relative;
   width: 100%;
-  margin-top: 12px; }
+  margin-top: 12px;
+}
 
 .contactForm .inputBox input,
 .contactForm .inputBox textarea {
@@ -93,7 +109,8 @@
   border: none;
   border-bottom: 2px solid #333;
   outline: none;
-  resize: none; }
+  resize: none;
+}
 
 .contactForm .inputBox span {
   position: absolute;
@@ -102,43 +119,124 @@
   font-size: 16px;
   margin: 10px 0px;
   pointer-events: none;
-  transition: 0.5s;
-  color: #666; }
+  transition: 0.4s ease-in-out;
+  color: #666;
+}
 
 .contactForm .inputBox input:focus ~ span,
 .contactForm .inputBox input:valid ~ span,
 .contactForm .inputBox textarea:focus ~ span,
 .contactForm .inputBox textarea:valid ~ span {
-  color: #00bcd4;
+  color: hsl(224, 43%, 58%);
   font-size: 12px;
-  transform: translateY(-20px); }
+  transform: translateY(-20px);
+}
 
 .contactForm .inputBox input[type="submit"] {
   width: 100%;
-  background-color: #00bcd4;
+  background-color: hsl(224, 43%, 58%);
   color: white;
   cursor: pointer;
   padding: 10px;
   font-size: 18px;
-  border-radius: 10px; }
+  border-radius: 10px;
+}
+
+.contactForm .inputBox input[type="submit"]:hover {
+  box-shadow: 0 0 1rem hsl(224, 43%, 58%);
+  color: lightgreen;
+}
 
 @media (max-width: 990px) {
-  .contact {
-    padding: 50px; }
-  .container {
-    flex-direction: column; }
-  .container .contactInfo {
-    margin-bottom: 40px; }
-  .container .contactInfo,
-  .contactForm {
-    width: 130%; }
-  .contactForm {
-    padding: 30px; } }
-  .container .contactInfo .box .icon{min-width: 40px;
-      height: 40px;}
+  .contact-c {
+    padding: 50px;
+  }
+  .container-c {
+    flex-direction: column;
+  }
+  .container-c .contactInfo {
+    margin-bottom: 40px;
+  }
+  .container-c .contactInfo {
+    margin-left: 40%;
+    width: 100%;
+  }
+  .container-c .contactForm {
+    margin-left: 15%;
+    padding: 30px;
+  }
+  .container-c .contactInfo .box-c .icon {
+    min-width: 40px;
+    height: 40px;
+  }
+}
 
 @media (max-width: 600px) {
-  .contactForm {
-    width: 150%; }
-  .container .contactInfo {
-    margin-right: 90px; } }
+  .contact-c {
+    padding: 50px;
+  }
+  .container-c {
+    flex-direction: column;
+  }
+  .container-c .contactInfo {
+    margin-bottom: 40px;
+  }
+  .container-c .contactInfo {
+    margin-left: 0%;
+    width: 100%;
+  }
+  .container-c .contactForm {
+    width: 100%;
+    margin-left: 30%;
+    padding: 30px;
+  }
+  .container-c .contactInfo .box-c .icon {
+    min-width: 40px;
+    height: 40px;
+  }
+}
+@media (max-width: 450px) {
+  .contact-c {
+    padding: 50px;
+  }
+  .container-c {
+    flex-direction: column;
+  }
+  .container-c .contactInfo {
+    margin-left: 0%;
+    width: 130%;
+  }
+  .container-c .contactForm {
+    width: 130%;
+    margin-left: 50%;
+    padding: 30px;
+  }
+  .container-c .contactInfo .box-c .icon {
+    min-width: 40px;
+    height: 40px;
+  }
+}
+
+@media (max-width: 280px) {
+  .contact-c {
+    padding: 50px;
+  }
+  .container-c {
+    flex-direction: column;
+  }
+  .container-c .contactInfo {
+    margin-left: -185px;
+    width: 100%;
+  }
+  .container-c .contactForm {
+    width: 300%;
+    margin-left: 120%;
+    padding: 30px;
+  }
+  .container-c .contactInfo .box-c .icon {
+    min-width: 40px;
+    height: 40px;
+  }
+}
+
+
