--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,17 +9,36 @@
 }
 
 /*Navbar Code*/
-
 .navbar {
   position: fixed;
   width: 100%;
   z-index: 6969;
-  background-color: hsl(224, 30%, 27%);
   color: #fff;
   padding: 5px 0;
   height: 65px;
+  backdrop-filter: blur(15px);
+  transition: background-color 0.3s ease;
+}
+.navbar.scrolled {
+  background-color: black; /* Change to the color you want */
+}
+.navbar .white-text {
+  color: white;
 }
 
+
+.menu a::after{
+  content: '';
+  height: 4px;
+  width: 0;
+  background-color:lightgreen;
+  display: block;
+  transition: all .3s;
+ 
+}
+.menu a:hover::after{
+  width: 100%;
+}
 .navbar-container {
   display: flex;
   justify-content: space-between;
@@ -43,12 +62,12 @@
 
 .menu a {
   margin-bottom: 10px;
-  color: #fff;
+  color: black;
   text-decoration: none;
   padding: 0px 20px;
 }
 .menu a:hover{
-  text-shadow: 1px 1px 1px rgba(33, 185, 255, 0.616);
+  /* text-shadow: 1px 1px 1px rgba(33, 185, 255, 0.616); */
   color: lightgreen;
   transition: 0.3s ease-in-out;
 }
@@ -57,6 +76,7 @@
   display: none;
   flex-direction: column;
   cursor: pointer;
+  background-color: transparent;
 }
 
 .line {
@@ -184,22 +204,28 @@ box-shadow: 0 0 0.69rem black;
   .menu.active {
     display: flex;
     flex-direction: column;
-    background-color: #333;
+    /* background-color: lightblue; */
+    /* background: rgba(0,0,0,0.8); */
+    /* backdrop-filter: saturate(180%) blur(10px); */
+    background: lightblue;
+    backdrop-filter: blur(10px);
+    box-shadow: 0 0 10px 5px rgba(20, 43, 249, 0.1), 0 0 20px 10px rgba(6, 9, 38, 0.1);
     position: absolute;
     top: 60px;
     right: 0;
     width: 100%;
+    border-radius: 15px 0px 15px 15px;
+    padding: 20px;
   }
 
   .menu.active a {
-    color: #fff;
+    color: black;
     opacity: 1;
   }
 
   #top-p-main{
     animation: none;
-  }
-}
+  }}
 
 @media (max-width: 300px){
 
